correction version mobile

--- a/style/desktop.css
+++ b/style/desktop.css
@@ -183,7 +183,6 @@ a{
 }
 #location{
     flex: 2;
-    /*width: 65vh;*/
 }
 
 #location, #populaires{
@@ -271,7 +270,7 @@ a{
 #populaires{
     flex: 1;
     margin-left: 2rem;
-    /*width: 30%;*/
+    max-width: 30%;
 
 }
 
